--- a/css/main.css
+++ b/css/main.css
@@ -19,9 +19,9 @@ html, body {
 }
 
 .box_chess {
-    width: 12.5%;
-    height: 12.5%;
-    position: absolute;
+	width: 12.5%;
+	height: 12.5%;
+	position: absolute;
 }
 
 .box_chess:nth-child(n+1):nth-child(-n+8):nth-child(even), 
@@ -31,44 +31,60 @@ html, body {
 .box_chess:nth-child(n+49):nth-child(-n+56):nth-child(2n),
 .box_chess:nth-child(n+57):nth-child(-n+64):nth-child(odd) {
 	content: "";
-	background-image: url(../img/black_chess.png);
+	background: rgba(255,150,51,1);
+	background: -moz-radial-gradient(center, ellipse cover, rgba(255,150,51,1) 0%, rgba(255,150,51,1) 15%, rgba(255,255,255,1) 16%, rgba(255,150,51,1) 19%, rgba(255,150,51,1) 34%, rgba(255,242,229,1) 37%, rgba(255,150,51,1) 49%, rgba(255,200,148,1) 61%, rgba(255,150,51,1) 62%, rgba(255,150,51,1) 63%, rgba(255,150,51,1) 64%);
+	background: -webkit-gradient(radial, center center, 0px, center center, 100%, color-stop(0%, rgba(255,150,51,1)), color-stop(15%, rgba(255,150,51,1)), color-stop(16%, rgba(255,255,255,1)), color-stop(19%, rgba(255,150,51,1)), color-stop(34%, rgba(255,150,51,1)), color-stop(37%, rgba(255,242,229,1)), color-stop(49%, rgba(255,150,51,1)), color-stop(61%, rgba(255,200,148,1)), color-stop(62%, rgba(255,150,51,1)), color-stop(63%, rgba(255,150,51,1)), color-stop(64%, rgba(255,150,51,1)));
+	background: -webkit-radial-gradient(center, ellipse cover, rgba(255,150,51,1) 0%, rgba(255,150,51,1) 15%, rgba(255,255,255,1) 16%, rgba(255,150,51,1) 19%, rgba(255,150,51,1) 34%, rgba(255,242,229,1) 37%, rgba(255,150,51,1) 49%, rgba(255,200,148,1) 61%, rgba(255,150,51,1) 62%, rgba(255,150,51,1) 63%, rgba(255,150,51,1) 64%);
+	background: -o-radial-gradient(center, ellipse cover, rgba(255,150,51,1) 0%, rgba(255,150,51,1) 15%, rgba(255,255,255,1) 16%, rgba(255,150,51,1) 19%, rgba(255,150,51,1) 34%, rgba(255,242,229,1) 37%, rgba(255,150,51,1) 49%, rgba(255,200,148,1) 61%, rgba(255,150,51,1) 62%, rgba(255,150,51,1) 63%, rgba(255,150,51,1) 64%);
+	background: -ms-radial-gradient(center, ellipse cover, rgba(255,150,51,1) 0%, rgba(255,150,51,1) 15%, rgba(255,255,255,1) 16%, rgba(255,150,51,1) 19%, rgba(255,150,51,1) 34%, rgba(255,242,229,1) 37%, rgba(255,150,51,1) 49%, rgba(255,200,148,1) 61%, rgba(255,150,51,1) 62%, rgba(255,150,51,1) 63%, rgba(255,150,51,1) 64%);
+	background: radial-gradient(ellipse at center, rgba(255,150,51,1) 0%, rgba(255,150,51,1) 15%, rgba(255,255,255,1) 16%, rgba(255,150,51,1) 19%, rgba(255,150,51,1) 34%, rgba(255,242,229,1) 37%, rgba(255,150,51,1) 49%, rgba(255,200,148,1) 61%, rgba(255,150,51,1) 62%, rgba(255,150,51,1) 63%, rgba(255,150,51,1) 64%);
 	background-position: center;
 	background-repeat: no-repeat;
+	border: 1px solid black;
+	border-radius: 50%;
+	width: 12%;
+	height: 12%;
 }
 
 .box_chess:nth-child(n+1):nth-child(-n+8) {
 	top: 0px;
 	display: block;
 }
+
 .box_chess:nth-child(n+9):nth-child(-n+16) {
 	top: 50px;
 	display: block;
 }
+
 .box_chess:nth-child(n+17):nth-child(-n+24) {
 	top: 100px;
 	display: block;
 }
+
 .box_chess:nth-child(n+25):nth-child(-n+32) {
 	top: 150px;
 	display: block;
 }
+
 .box_chess:nth-child(n+33):nth-child(-n+40) {
 	top: 200px;
 	display: block;
 }
+
 .box_chess:nth-child(n+41):nth-child(-n+48) {
 	top: 250px;
 	display: block;
 }
+
 .box_chess:nth-child(n+49):nth-child(-n+56) {
 	top: 300px;
 	display: block;
 }
+
 .box_chess:nth-child(n+57):nth-child(-n+64) {
 	top: 350px;
 	display: block;
 }
-
 
 .box_chess:nth-child(1), 
 .box_chess:nth-child(9),
@@ -102,6 +118,7 @@ html, body {
 .box_chess:nth-child(59) {
 	left: 100px;
 }
+
 .box_chess:nth-child(4), 
 .box_chess:nth-child(12),
 .box_chess:nth-child(20),
@@ -112,6 +129,7 @@ html, body {
 .box_chess:nth-child(60) {
 	left: 150px;
 }
+
 .box_chess:nth-child(5), 
 .box_chess:nth-child(13),
 .box_chess:nth-child(21),
@@ -122,6 +140,7 @@ html, body {
 .box_chess:nth-child(61) {
 	left: 200px;
 }
+
 .box_chess:nth-child(6), 
 .box_chess:nth-child(14),
 .box_chess:nth-child(22),
@@ -132,6 +151,7 @@ html, body {
 .box_chess:nth-child(62) {
 	left: 250px;
 }
+
 .box_chess:nth-child(7), 
 .box_chess:nth-child(15),
 .box_chess:nth-child(23),
@@ -142,6 +162,7 @@ html, body {
 .box_chess:nth-child(63) {
 	left: 300px;
 }
+
 .box_chess:nth-child(8), 
 .box_chess:nth-child(16),
 .box_chess:nth-child(24),
